crates/ftui-core/tests/compile_fail/cooked_cannot_enter_alt.rs
// Safety: Cannot enter alternate screen from cooked — must be in raw mode first.
use ftui_core::mode_typestate::*;

fn main() {
    let cooked = TerminalMode::<COOKED>::new();
    cooked.enter_alt_screen();
}
