crates/ftui-core/tests/compile_fail/cooked_cannot_enter_alt.stderr
error[E0599]: no method named `enter_alt_screen` found for struct `ftui_core::mode_typestate::TerminalMode<0>` in the current scope
 --> tests/compile_fail/cooked_cannot_enter_alt.rs:6:12
  |
6 |     cooked.enter_alt_screen();
  |            ^^^^^^^^^^^^^^^^
  |
help: there is a method `has_alt_screen` with a similar name
  |
6 -     cooked.enter_alt_screen();
6 +     cooked.has_alt_screen();
  |
